--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 backend/python_scripts/__pycache__/database.cpython-36.pyc
 backend/python_scripts/__pycache__/flipp.cpython-36.pyc
 backend/python_scripts/__pycache__/location_services.cpython-36.pyc
+keys.txt
